<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_label"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/poids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_placeholder"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/taille"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_placeholder"
        android:inputType="numberDecimal"
        />
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_centimetre"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/radio_metre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter"
            />
        <RadioButton
            android:id="@+id/radio_centimetre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeter"
            />
    </RadioGroup>
    <CheckBox
        android:id="@+id/commentaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_label"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/result_default"
        />
</LinearLayout>